--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+BatchJobs_1.0-966:
+- Dropped support for R < 2.13.0 (.find.packages deprecated)
+- speedups in reduceResults[ReturnValue]
+- Output of showStatus now contains a time information
+- fixed a bug in findErrors (argument 'ids' was ignored)
+- New function sweepRegistry: Remove intermediate/temporary/obsolete files
+- Better error handling in case of I/O errors
+- New functions: findStarted() and findNotStarted()
+
 BatchJobs_1.0-915:
 - new option to raise warnings to errors on the slaves 
 - option to set process priority via nice in clusterFunctionsMulticore and 
