--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+BatchJobs_1.1-1135:
+- Increased minor version number
+- Added support for SLURM schedulers
+- Function getErrors renamed to getErrorMessages due to conflicts with RUnit.
+  Interface change: argument "print" dropped
+- Redefined return value of function "waitForJobs" which should now be much easier to understand.
+- New option "BatchJobs.check.posix" to enable more relaxed checks on file and directory names
+- Helper functions to simplify integration into other packages: getConfig, loadConfig and setConfig.
+  showConf was replaced with a print generic.
+- Improved stability and speed of killJobs
+- Added a workaround to fix file URI handling on windows
+- Many minor bug and documentation fixes
+- The registry now supports an "exports" directory of exported objects,
+  which are always loaded on the slaves, e.g. data objects which are needed in every job
+  This directory can be either managed manually or - more  conveniently - via the "fail" package on CRAN.
+- The registry now supports a list of source directories. 
+  All R files in these subdirectories are sourced on the slaves (and also on the master)
+  Nice if you have a lot of helper code in seperate R files which is needed in your jobs.
+- batchMap and all result functions where this is reasonable support naming results with the names
+  of the elements that were mapped over (see use.names argument)
+- batchMap now supports mapping over any kind of object (not only lists and vectors) that supports the 
+  "length" and "[" / "[["- index method. 
+
 BatchJobs_1.0-966:
 - Dropped support for R < 2.13.0 (.find.packages deprecated)
 - speedups in reduceResults[ReturnValue]
